--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -3,7 +3,7 @@ theme:
   name: material
 
 nav:
-  - Introdução: index.md
-  - Entidades: entidades.md
+  - Início: index.md
   - Endpoints: endpoints.md
+  - Estrutura: entidades.md
   - Setup: setup.md
